<resources>

    <string name="app_name">P2P</string>
    <string name="full_app_name">Play 2 Play</string>
    <string name="shared_preferences">P2P_GAME_SHARED_PREFERENCES</string>

    <!-- Common -->
    <string name="continue_">Continuar</string> <!-- The `_` should be because continue is a reserved symbol :( -->
    <string name="start">Iniciar</string>
    <string name="connect">Conectarse</string>
    <string name="understood">Entendido</string>
    <string name="unknown">Desconocido</string>
    <string name="points">Puntos</string>
    <string name="thanks">¡Gracias!</string>
    <string name="share">Compartir</string>
    <string name="finish_game">Terminar partida</string>
    <string name="i_do">Quiero</string>
    <string name="i_dont">No quiero</string>


    <!-- Request location permission -->
    <string name="request_location_title">Lo necesitás para jugar</string>
    <string name="request_location_description">La tecnología Bluetooth requiere que tengamos los permisos de Bluetooth y de tu ubicación, en caso de no otorgárnoslo tendremos que cerrar la aplicación :(</string>

    <!-- Games -->
    <string name="games_user_name">Tu nombre</string>
    <string name="games_join">Unirse</string>
    <string name="games_create">Crear sala</string>
    <plurals name="games_paused">
        <item quantity="one">El juego está pausado hasta que %s se vuelva a unir</item>
        <item quantity="other">El juego está pausado hasta que %s se vuelvan a unir</item>
    </plurals>
    <string name="games_paused_join_last_names">%s y %s</string>

    <!-- Join games -->
    <string name="join_games_title">Seleccioná el celular de quien creó el juego</string>
    <string name="join_game_troubleshoot">En caso de no encontrar el celular deben conectarse manualmente. Hacé click acá y sigan las instrucciones en ambos celulares.</string>
    <string name="join_game_select_device">Tenés que seleccionar un dispositivo</string>

    <!-- Games names -->
    <string name="games_tutti_frutti">Tutti Frutti</string>
    <string name="games_impostor">Impostor</string>
    <string name="games_truco">Truco</string>
    <string name="games_name_error">¡Para jugar primero tenés que decirnos tu nombre!</string>
    <string name="games_name_max_length_error">Tu nombre puede tener hasta 7 letras</string>

    <!-- Tutti Frutti - Categories -->
    <string name="tf_categories_custom">Ingresá una categoría personalizada</string>
    <string name="tf_categories_selected_categories">Categorías seleccionadas</string>
    <string name="tf_categories_count_error">¡Debés seleccionar al menos 5!</string>

    <!-- Turn on Bluetooth screen -->
    <string name="turn_on_bluetooth_title">¡Necesitamos que enciendas el bluetooth!</string>
    <string name="turn_on_bluetooth_description">Para poder conectarte y jugar con otras personas, tenés que tener el Bluetooth activado.</string>
    <string name="turn_on_bluetooth">Encender el bluetooth</string>

    <!-- Tutti Frutti - Rounds -->
    <string name="tutti_frutti_rounds">¿Cuántas rondas van a jugar?</string>
    <string name="decrease_number">Disminuir número</string>
    <string name="increase_number">Incrementar número</string>

    <!-- How to connect Bluetooth screen -->
    <string name="how_to_connect_bluetooth_title">¿Cómo conectarse con otro dispositivo Bluetooth?</string>

    <!-- Tutti Frutti - Game -->
    <string name="tf_letter"><![CDATA[Letra: <font color=#FF8550>%s</font>]]></string>
    <string name="tf_round"><![CDATA[Ronda: <font color=#FF8550>%d</font>/%d]]></string>
    <string name="tf_validation_error">¡Falta completar!</string>
    <string name="tf_finish_round">¡Basta para mí, basta para todxs!</string>

    <!-- Lobby -->
    <string name="lobby_give_help_players_title">Pedile al resto que se sume</string>
    <string name="lobby_give_help_players_decription"><![CDATA[Para sumarse a la partida se tienen que unir al celular con el nombre <b>%s</b>]]></string>
    <string name="lobby_connected_players">Jugadorxs listxs</string>
    <string name="lobby_no_players_yet">Aún no hay jugadorxs…</string>
    <string name="lobby_waiting_players">Esperando jugadorxs</string>
    <string name="lobby_start_game">Comenzar juego</string>
    <string name="lobby_make_me_visible">Hacerme visible</string>
    <string name="lobby_build_teams">Armar equipos</string>
    <string name="tr_lobby_help_order_players"><![CDATA[Arrastrá lxs jugadorxs según la posición que vayan a ocupar en la mesa. Lx jugadorx en la posición <font color=#FFB349><b>marcada</b></font> será la mano.]]></string>

    <!-- Tutti Frutti - Review screen -->
    <string name="tf_enough_player"><![CDATA[¡<b>%s</b> dijo basta!]]></string>

    <!-- Tutti Frutti - Loading screen -->
    <string name="tf_wait_for_review">¡Discutan los puntajes con quien creó el juego!</string>
    <string name="tf_wait_for_words">Esperando las palabras del resto de lxs jugadorxs</string>

    <!-- Tutti Frutti - Final Score -->
    <string name="tf_winner">Ganó %s</string>
    <string name="tf_points">%d puntos</string>
    <string name="tf_exit">Salir</string>

    <!-- Impostor - Game -->

    <!-- Impostor create game -->
    <string name="im_write_key_word">Ingrese la palabra clave</string>
    <string name="im_write_key_word_theme">Ingrese la temática de la palabra clave</string>
    <string name="im_validation_error_key_word_input">¡Debés ingresar la palabra para poder comenzar!</string>
    <string name="im_validation_error_key_word_theme_input">¡Debés ingresar la temática para poder comenzar!</string>
    <string name="im_validation_error_players">¡Se deben unir al menos dos jugadorxs!</string>

    <!-- Impostor play info -->
    <string name="im_key_word_is">La palabra clave es</string>
    <string name="im_key_word_theme_is">La temática es</string>
    <string name="im_impostor_is">El impostor es</string>

    <!-- Impostor play -->
    <string name="im_you_are_impostor">Sos lx impostorx, no sabés la palabra clave</string>
    <string name="im_you_are_not_impostor">No sos lx impostorx, la palabra clave es</string>
    <string name="im_simulate">Simulá</string>


    <!-- Error screen -->
    <string name="error_bluetooth_off">Se apagó el bluetooth. Para poder jugar tenés que mantenerlo encendido.</string>
    <string name="error_screen_retry_button">Quiero volver a intentarlo</string>
    <string name="error_client_connection_failure">Hubo un error al intentar conectarse al dispositivo de lx otrx jugadorx.</string>
    <string name="error_server_connection_failure">Se perdió la conexión con la sala.</string>
    <string name="error_name_in_use">El nombre que elegiste ya está siendo usado por otrx jugadorx. Elegí otro así se pueden diferenciar.</string>
    <string name="error_room_already_full">La sala del juego ya está llena.</string>
    <string name="error_rejoin_name">Para unirte a la sala del juego que ya inició tenés que hacerlo con alguno de los siguientes nombres: %s\nEs importante que este sea exactamente igual, incluyendo mayúsculas y tildes.</string>
    <string name="error_joined_game">¡Te uniste a un juego incorrecto! Para entrar a la sala tenés que seleccionar el juego que creó el celular al que te estás intentando conectar.</string>
    <string name="error_client_connection_lost">Se perdió la conexión con %s.</string>
    <string name="error_connection_write_failure">Se perdió la conexión con la sala de juego, lo sentimos mucho.</string>
    <string name="tf_error_single_player">El resto de lxs jugadorxs abandonaron el juego… ¡felicitaciones ganadorx!</string>

    <string name="exit_game">¿Está seguro de que querés abandonar el juego?</string>
    <string name="exit_game_yes">Si</string>
    <string name="exit_game_no">No</string>

    <!-- Truco -->
    <!-- Create game -->
    <string name="truco_create_game_title">Creá tu partida de truco</string>
    <string name="truco_create_game_subtitle">Selecciona la cantidad de jugadores</string>
    <string name="truco_create_game_two_player">2 jugadorxs</string>
    <string name="truco_create_game_four_player">4 jugadorxs</string>
    <string name="truco_points">¿Hasta cuántos puntos van a jugar?</string>

    <!-- Play -->
    <string name="truco_card_dropping_place">Jugá tu carta</string>
    <string name="truco_their_score_label">Ell</string>
    <string name="truco_our_score_label">Nos</string>
    <string name="truco_actions_open_button">Abrir las acciones de la ronda del truco</string>
    <string name="truco_swords_card">%d de espada</string>
    <string name="truco_cups_card">%d de copa</string>
    <string name="truco_clubs_card">%d de basto</string>
    <string name="truco_golds_card">%d de oro</string>
    <string name="truco_unknown_card">Carta desconocida</string>
    <string name="truco_ask_for_envido">Envido</string>
    <string name="truco_ask_for_real_envido">Real envido</string>
    <string name="truco_ask_for_falta_envido">Falta envido</string>
    <string name="truco_ask_for_truco">Truco</string>
    <string name="truco_ask_for_retruco">Quiero\nretruco</string>
    <string name="truco_ask_for_vale_cuatro">Quiero\nvale cuatro</string>
    <string name="truco_ask_for_envido_goes_first">Envido\nva primero</string>
    <string name="truco_answer_envido_are_good">Son buenas</string>
    <string name="truco_answer_envido_are_better">%d son mejores</string>
    <string name="truco_go_to_deck">Me voy al mazo</string>
    <string name="truco_go_to_deck_action">Me voy\nal mazo</string>
    <plurals name="truco_accumulated_points">
        <item quantity="one"><![CDATA[<font color=#FF8550>%d</font> punto en juego]]></item>
        <item quantity="other"><![CDATA[<font color=#FF8550>%d</font> puntos en juego]]></item>
    </plurals>

    <!-- Truco final score -->
    <string name="tr_final_score_other_team">Ellxs</string>
    <string name="tr_winner">¡Ganamos!</string>
    <string name="tr_loser">Perdimos…</string>
    <string name="tr_points">%d - %d</string>
    <string name="server_lobby_make_me_visible_text">En caso de que los otros dispositivos no te encuentren, seleccioná \'Hacerme visible\'.</string>

</resources>
