<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingHorizontal="@dimen/medium_more"
    android:paddingVertical="@dimen/medium"
    android:visibility="gone">

    <Button
        android:id="@+id/action_response_yes_i_do"
        style="@style/Widget.P2P.Button.SecondOptionButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/i_do"
        app:layout_constraintEnd_toEndOf="@id/end_barrier"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_min="wrap" />

    <Button
        android:id="@+id/action_response_yes_envido"
        style="@style/Widget.P2P.Button.SecondOptionOutline"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/medium"
        android:text="@string/truco_ask_for_envido"
        app:layout_constraintEnd_toEndOf="@id/end_barrier"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/action_response_yes_i_do"
        app:layout_constraintWidth_min="wrap" />

    <Button
        android:id="@+id/action_response_yes_real_envido"
        style="@style/Widget.P2P.Button.SecondOptionOutline"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/medium"
        android:text="@string/truco_ask_for_real_envido"
        app:layout_constraintEnd_toEndOf="@id/end_barrier"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/action_response_yes_envido"
        app:layout_constraintWidth_min="wrap" />

    <Button
        android:id="@+id/action_response_yes_falta_envido"
        style="@style/Widget.P2P.Button.SecondOptionOutline"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/medium"
        android:text="@string/truco_ask_for_falta_envido"
        app:layout_constraintEnd_toEndOf="@id/end_barrier"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/action_response_yes_real_envido"
        app:layout_constraintWidth_min="wrap" />

    <Button
        android:id="@+id/action_response_yes_retruco"
        style="@style/Widget.P2P.Button.SecondOptionOutline"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/medium"
        android:text="@string/truco_ask_for_retruco"
        app:layout_constraintEnd_toEndOf="@id/end_barrier"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/action_response_yes_falta_envido"
        app:layout_constraintWidth_min="wrap" />

    <Button
        android:id="@+id/action_response_yes_vale_cuatro"
        style="@style/Widget.P2P.Button.SecondOptionOutline"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/medium"
        android:text="@string/truco_ask_for_vale_cuatro"
        app:layout_constraintEnd_toEndOf="@id/end_barrier"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/action_response_yes_retruco"
        app:layout_constraintWidth_min="wrap" />

    <Button
        android:id="@+id/action_response_no_i_dont"
        style="@style/Widget.P2P.Button.Outline"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/medium"
        android:text="@string/i_dont"
        app:layout_constraintEnd_toEndOf="@id/end_barrier"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/action_response_yes_vale_cuatro"
        app:layout_constraintWidth_min="wrap" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/end_barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="end"
        app:constraint_referenced_ids="
        action_response_yes_i_do,
        action_response_yes_envido,
        action_response_yes_real_envido,
        action_response_yes_falta_envido,
        action_response_yes_retruco,
        action_response_yes_vale_cuatro,
        action_response_no_i_dont" />

</androidx.constraintlayout.widget.ConstraintLayout>