<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/view_guidelines" />

    <TextView
        android:id="@+id/help_players_title"
        style="@style/P2P_Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lobby_give_help_players_title"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="@id/guideline_begin"
        app:layout_constraintTop_toTopOf="@id/guideline_top" />

    <TextView
        android:id="@+id/help_players_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/medium"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="@id/guideline_begin"
        app:layout_constraintTop_toBottomOf="@id/help_players_title"
        tools:text="@string/lobby_give_help_players_decription" />

    <TextView
        android:id="@+id/connected_players"
        style="@style/P2P_Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/large"
        android:text="@string/lobby_connected_players"
        app:layout_constraintStart_toStartOf="@id/guideline_begin"
        app:layout_constraintTop_toBottomOf="@id/help_players_description" />

    <TextView
        android:id="@+id/help_order_players_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/medium"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="@id/guideline_begin"
        app:layout_constraintTop_toBottomOf="@id/connected_players"
        android:text="@string/tr_lobby_help_order_players" />

    <GridView
        android:id="@+id/players_grid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/medium"
        android:layout_marginBottom="@dimen/medium"
        android:layout_marginStart="@dimen/medium"
        android:layout_marginEnd="@dimen/medium"
        android:numColumns="2"
        android:horizontalSpacing="@dimen/medium_more"
        android:verticalSpacing="@dimen/largest_extra"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/help_order_players_description"
        app:layout_constraintStart_toStartOf="@id/guideline_begin"
        app:layout_constraintBottom_toTopOf="@id/start_game_button"
        tools:listitem="@layout/view_truco_connected_user" />

    <Button
        android:id="@+id/start_game_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/medium_extra"
        android:enabled="false"
        android:text="@string/lobby_start_game"
        app:layout_constraintBottom_toBottomOf="@id/guideline_bottom"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintStart_toStartOf="@id/guideline_begin" />

</androidx.constraintlayout.widget.ConstraintLayout>