<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/view_guidelines" />

    <TextView
        android:id="@+id/title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/join_games_title"
        android:textSize="@dimen/font_big"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintStart_toStartOf="@id/guideline_begin"
        app:layout_constraintTop_toTopOf="@id/guideline_top" />

    <!-- TODO: Hacer esta lógica -->
    <TextView
        android:id="@+id/troubleshoot"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/tiniest"
        android:text="@string/join_game_troubleshoot"
        android:textSize="@dimen/font_medium_extra"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintStart_toStartOf="@id/guideline_begin"
        app:layout_constraintTop_toBottomOf="@id/title" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/devices_recycler"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginTop="@dimen/medium"
        android:layout_marginBottom="@dimen/medium"
        app:layout_constraintBottom_toTopOf="@id/connect_button"
        app:layout_constraintTop_toBottomOf="@id/troubleshoot"
        app:layout_constraintVertical_bias="0"
        tools:listitem="@layout/view_devices_item" />

    <Button
        android:id="@+id/connect_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:text="@string/connect"
        app:layout_constraintBottom_toBottomOf="@id/guideline_bottom"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintStart_toStartOf="@id/guideline_begin" />

</androidx.constraintlayout.widget.ConstraintLayout>