<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_gravity="center"
    android:background="@color/colorBackground">

    <include layout="@layout/view_guidelines" />

    <TextView
        android:id="@+id/key_word_title"
        style="@style/P2P_Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/im_key_word_is"
        app:layout_constraintBottom_toTopOf="@id/key_word"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/key_word"
        style="@style/P2P_Title_Extra"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/small"
        app:layout_constraintBottom_toTopOf="@id/impostor_title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:text="BALLENA" />


    <TextView
        android:id="@+id/impostor_title"
        style="@style/P2P_Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/im_impostor_is"
        android:paddingTop="@dimen/large"
        app:layout_constraintBottom_toTopOf="@id/impostor"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/impostor"
        style="@style/P2P_Title_Extra"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/largest_extra"
        app:layout_constraintBottom_toTopOf="@id/finish_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:text="DARDO" />

    <Button
        android:id="@+id/finish_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/finish_game"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
