<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground">

    <include layout="@layout/view_guidelines" />

    <View
        android:id="@+id/top_background"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/colorPrimaryVariant"
        app:layout_constraintBottom_toBottomOf="@+id/text_field"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_field"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/games_user_name"
        android:paddingBottom="@dimen/medium_extra"
        app:endIconDrawable="@drawable/ic_pencil"
        app:endIconMode="custom"
        app:helperText="@string/games_name_max_length_error"
        app:hintTextColor="@color/green_eden"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintStart_toStartOf="@id/guideline_begin"
        app:layout_constraintTop_toTopOf="@id/guideline_top">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/user_name_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:maxLines="1"
            android:paddingStart="@dimen/small"
            android:paddingEnd="@dimen/small"
            android:theme="@style/P2P.EditTextTheme" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/games_recycler"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/big"
        android:orientation="vertical"
        android:requiresFadingEdge="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintStart_toStartOf="@id/guideline_begin"
        app:layout_constraintTop_toBottomOf="@id/text_field"
        tools:listitem="@layout/view_games_item" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/share_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/screen_padding"
        android:contentDescription="@string/share"
        android:src="@drawable/ic_share"
        app:backgroundTint="@color/coral"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/guideline_end" />

</androidx.constraintlayout.widget.ConstraintLayout>